--- a/home.css
+++ b/home.css
@@ -100,6 +100,7 @@ body {
 
 .what-we-do-container {
     display: flex;
+    padding-top: 160px;
     padding-bottom: 210px;
     align-items: center;
     flex-direction: column;
@@ -153,3 +154,250 @@ body {
     border: 1px solid rgba(120, 56, 123, 0.5);
     margin-bottom: 132px;
 }
+
+.mof-container {
+    background-color: #4B4B4B;
+    height: 540px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.mof-content-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.mof-copy-container {
+    display: flex;
+    padding-top: 72px;
+    flex-direction: column;
+    width: 27%;
+}
+
+.mof-header {
+    color: #fff;
+    font-size: 48px;
+    align-self: center;
+    width: fit-content;
+    
+}
+
+.mof-copy {
+    padding-top: 32px;
+    color: #fff;
+    font-size: 14px;
+    
+}
+
+.mof-line-separator {
+    border: 1px solid #d4af37;
+    margin: 0 auto;
+    
+}
+
+.mof-line-separator-container {
+    padding-top: 48px;
+    width: 33%;
+    align-self: center;
+}
+
+.founder-image-container img{
+    border-radius: 8px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.founder-image-container {
+    padding-top: 32px;  
+}
+
+.mof-button-container {
+    padding-top: 42px;
+    align-self: center;
+}
+
+.mof-button {
+    background-color: #78387B;
+    border: none;
+    color: white;
+    padding: 28px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    border-radius: 10px;
+    
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+.mof-button:hover, .mof-button:active, .mof-button:focus {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+}
+
+.latest-blog-container {
+    padding: 132px 0 80px 0;
+    
+}
+
+.blog-headers-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blog-mini-header {
+    font-size: 14px;
+    color: #78387B;
+    font-weight: bold;
+}
+
+.blog-header {
+    font-size: 42px;
+    color: #4b4b4b;
+    padding-top: 14px;
+}
+
+.blog-posts-container {
+    padding-top: 64px;
+    display: flex;
+    justify-content: center;
+}
+
+.blog-post-img-container img {
+    border-radius: 8px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.bp-1-copy-container {
+    align-self: center;
+    padding-left: 32px;
+    width: 22%;
+}
+
+.bp-2-copy-container {
+    align-self: center;
+    padding-right: 32px;
+    width: 22%;
+}
+
+.bp-copy-header {
+    font-size: 20;
+    font-weight: bold;
+    color: #4b4b4b;
+    width: 90%;
+}
+
+.bp-date {
+    font-size: 12px;
+    color: #C4C4C4;
+    padding-bottom: 8px;
+}
+
+.bp-copy {
+    color: #4b4b4b;
+    padding-top: 16px;
+}
+
+.read-more-1 {
+    padding-top: 32px;
+    color: #78387B;
+    font-size: 14px;
+}
+
+.read-more-2 {
+    padding-top: 32px;
+    color: #d4af37;
+    font-size: 14px;
+}
+
+.read-more-1, .read-more-2 {
+    display: inline-block;
+    font-size: 18px;
+    cursor:pointer;
+    
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.read-more-1:hover, .read-more-2:hover, 
+.read-more-1:active, .read-more-2:active, 
+.read-more-1:focus,
+.read-more-2:focus {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+}
+
+.quotes-container {
+    background-color: #78387B;
+    min-height: 292px;
+    max-height:fit-content;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 52px;
+}
+
+.quotes-copy-container {
+    display: flex;
+    padding-top: 64px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.quotes-author {
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.quotes-title {
+    font-size: 12px;
+    font-weight: bold;
+    color: #fff;
+    padding-top: 4px;
+}
+
+.quotes-quote {
+    font-size: 12px;
+    font-weight: bold;
+    color: #fff;
+    padding-top: 20px;
+}
+
+.car-ind-container {
+    padding-top: 48px;
+    display: flex;
+    flex-direction: row;
+}
+
+.car-ind-1, .car-ind-3 {
+    border: 8px solid #c4c4c4;
+    border-radius: 50%;
+}
+
+.car-ind-2 {
+    border: 8px solid #d4af37;
+    border-radius: 50%; 
+}
+
+.car-ind-1, .car-ind-2 {
+    margin-right: 14px;
+}
+
+
