--- a/about.css
+++ b/about.css
@@ -56,7 +56,7 @@ a:hover {
     align-self: center;
 }
 
-.section-one-container {
+.main-nav-section {
     display: flex;
     width: 100%;
     justify-content: flex-end;
@@ -346,7 +346,7 @@ footer {
         justify-content: space-evenly;
     }
 
-    .section-one-container {
+    .main-nav-section {
         width: auto;
     }
 
