--- a/contactus.css
+++ b/contactus.css
@@ -56,7 +56,7 @@ a:hover {
     align-self: center;
 }
 
-.section-one-container {
+.main-nav-section {
     display: flex;
     width: 100%;
     justify-content: flex-end;
@@ -433,7 +433,7 @@ footer {
         display: none;
     }
 
-    .section-one-container {
+    .main-nav-section {
         width: auto;
     }
 
