--- a/home.css
+++ b/home.css
@@ -56,7 +56,7 @@ a:hover {
     align-self: center;
 }
 
-.section-one-container {
+.main-nav-section {
     display: flex;
     width: 100%;
     justify-content: flex-end;
@@ -695,7 +695,7 @@ footer {
         width: 100%;
         justify-content: space-evenly;
     }
-    .section-one-container {
+    .main-nav-section {
         width: auto;
     }
     .wwd-subjects {
